--- a/app/components/BlockHeading/BlockHeading.njk
+++ b/app/components/BlockHeading/BlockHeading.njk
@@ -1,6 +1,5 @@
 {% macro BlockHeading(name, heading='', size='medium') -%}
 {% set sizes = {
-  'xxlarge': 'h1',
   'xlarge': 'h1',
   'large': 'h2',
   'medium': 'h3',
@@ -9,6 +8,6 @@
 {% set heading = getFormattedProp(name, 'heading', { value: heading }) %}
 {% if heading %}
 {% set size = getBlockProp(name, 'size', { value: size, defaultValue: 'medium' } ) %}
-  <{{ sizes[size] }} class="gv-u-heading-{{ size }} heading-{{ size }}">{{ heading | safe }}</{{ sizes[size] }}>
+  <{{ sizes[size] }} class="{{ govukClassname('heading-' + size) }}">{{ heading | safe }}</{{ sizes[size] }}>
 {% endif %}
 {%- endmacro %}
