--- a/app/css/utils/_typography.pcss
+++ b/app/css/utils/_typography.pcss
@@ -1,4 +1,4 @@
-@import '_mediaqueries.pcss';
+@import '_custom-media.pcss';
 
 :root {
   --gv-u-heading-defaults: {
@@ -13,7 +13,7 @@
 
     font-size: 3.2rem;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 4.8rem;
     }
   }
@@ -25,7 +25,7 @@
     margin-top: 0.46875em;
     margin-bottom: 0.9375em;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 4.8rem;
     }
   }
@@ -38,7 +38,7 @@
     margin-top: 1.04167em;
     margin-bottom: 0.41667em;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 3.6rem;
     }
   }
@@ -51,7 +51,7 @@
     margin-top: 1.25em;
     margin-bottom: 0.5em;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 2.7rem;
     }
   }
@@ -64,7 +64,7 @@
     margin-top: 1.25em;
     margin-bottom: 0.5em;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 2.4rem;
     }
   }
@@ -74,7 +74,7 @@
 
     font-size: 1.6rem;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 1.9rem;
     }
   }
@@ -86,7 +86,7 @@
     margin-top: 0.625em;
     margin-bottom: 0.3125em;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       line-height: 1.31579;
       margin-top: 1.05263em;
     }
@@ -95,7 +95,7 @@
   --gv-u-text-lede: {
     font-size: 1.6rem;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 1.9rem;
     }
   }
@@ -103,7 +103,7 @@
   --gv-u-text: {
     font-size: 1.6rem;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 1.9rem;
     }
   }
@@ -111,7 +111,7 @@
   --gv-u-text-small: {
     font-size: 1.6rem;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 1.9rem;
     }
   }
@@ -119,7 +119,7 @@
   --gv-u-text-xsmall: {
     font-size: 1.6rem;
 
-    @media (--medium-viewport) {
+    @media (--govuk-medium) {
       font-size: 1.9rem;
     }
   }
