--- a/app/components/Section/Section.njk
+++ b/app/components/Section/Section.njk
@@ -4,8 +4,11 @@
   '3': 'gv-u-heading-small',
   '4': 'gv-u-heading-medium'
 } %}
+{% set heading = getFormattedProp(name, 'heading') %}
 <section id="{{ name }}" class="moj-Section moj-Section--{{ depth }} {{ className }}" data-block-name="{{name}}">
-<h{{depth}} class="moj-Section__heading moj-Section__heading--{{ depth }} {{ gv_depth[depth] }}{% if className %} {{ className }}__heading{% endif %}">{{ getFormattedProp(name, 'heading') | safe }}</h{{depth}}>
+{% if heading %}
+<h{{depth}} class="moj-Section__heading moj-Section__heading--{{ depth }} {{ gv_depth[depth] }}{% if className %} {{ className }}__heading{% endif %}">{{ heading | safe }}</h{{depth}}>
+{% endif %}
 {% if content %}
 {{ content }}
 {% endif %}
