--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -66,7 +66,7 @@
 {% block proposition_header %}
 <div class="header-proposition">
   <div class="content">
-    <a href="/" id="proposition-name" data-link-type="service-name">{% block proposition_name %}Propositon name{% endblock %}</a>
+    <a href="/" id="proposition-name" data-link-type="service-name">{% block proposition_name %}Propositon{% endblock %}</a>
   </div>
 </div>
 {% endblock %}
@@ -85,6 +85,6 @@
 {% if flowchart or edit %}
 <script src="//cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.min.js"></script>
 <script src="/public/javascripts/block-edit/block-edit.js"></script>
-<link href="/public/javascripts/block-edit/block-edit.css" rel="stylesheet"></script>
+<link href="/public/javascripts/block-edit/block-edit.css" rel="stylesheet">
 {% endif %}
 {% endblock %}
