Move app-base template and common css to module

--- a/app/components/CookieMessage/CookieMessage.pcss
+++ b/app/components/CookieMessage/CookieMessage.pcss
@@ -1,4 +1,8 @@
-@import 'utils/_app.pcss';
+@import 'utils/_utils.pcss';
+
+:root {
+  --global-cookie-message--background: var(--light-blue-25);
+}
 
 #global-cookie-message {
   background-color: var(--global-cookie-message--background);
