--- a/app/components/FeedbackBanner/FeedbackBanner.pcss
+++ b/app/components/FeedbackBanner/FeedbackBanner.pcss
@@ -1,4 +1,10 @@
-@import 'utils/_app.pcss';
+@import 'utils/_utils.pcss';
+
+:root {
+  --FeedbackBanner--background: var(--purple);
+  --FeedbackBanner--color: var(--govuk-white);
+  --FeedbackBanner_a--color: var(--govuk-white);
+}
 
 .FeedbackBanner {
   background: var(--FeedbackBanner--background);
