Correct gv-text-* sizes and add missing variants

--- a/app/css/utils/_typography.pcss
+++ b/app/css/utils/_typography.pcss
@@ -108,6 +108,14 @@
     }
   }
 
+  --gv-u-text-medium: {
+    font-size: 1.9rem;
+
+    @media (--govuk-medium) {
+      font-size: 2.4rem;
+    }
+  }
+
   --gv-u-text-small: {
     font-size: 1.6rem;
 
@@ -117,10 +125,10 @@
   }
 
   --gv-u-text-xsmall: {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
 
     @media (--govuk-medium) {
-      font-size: 1.9rem;
+      font-size: 1.6rem;
     }
   }
 }
