Add further app styling enhancements

--- a/app/css/utils/app-enhancements.pcss
+++ b/app/css/utils/app-enhancements.pcss
@@ -63,3 +63,15 @@ table td {
     width: 11rem;
   }
 }
+
+sup {
+  font-size: 75%;
+}
+
+.app__section_heading {
+  @apply --gv-u-heading-small;
+}
+
+.app__section_heading + .app__heading {
+  margin-top: 1rem;
+}
