Fix broken components and flowchart

--- a/app/components/SubBlock/SubBlock.njk
+++ b/app/components/SubBlock/SubBlock.njk
@@ -1,3 +1,4 @@
+{% from '../Control/Control.njk' import Control with context %}
 {% from '../DependsHidden/DependsHidden.njk' import DependsHidden with context %}
 {% from '../DependsAria/DependsAria.njk' import DependsAria with context %}
 {% macro SubBlock(name, closed=false) %}
