--- a/app/components/RadioGroup/RadioGroup.njk
+++ b/app/components/RadioGroup/RadioGroup.njk
@@ -1,7 +1,10 @@
+{% from '../Fieldset/Fieldset.njk' import Fieldset with context %}
+{% from '../OptionLabel/OptionLabel.njk' import OptionLabel with context %}
+{% from '../SubBlock/SubBlock.njk' import SubBlock with context %}
 {% macro RadioGroup(name, inline='', reveals='', visually_hidden=true, or=false) %}
 {% set error = getError(name) %}
 <div class="form-group{% if error %} error{% endif %}"{% if name %} data-block-name="{{name}}"{% endif %}>
-{% call fieldset(name, inline=inline) %}
+{% call Fieldset(name, inline=inline) %}
     {% set or = getBlockProp(name, 'or') %}
     {% set reveals = getBlockProp(name, 'reveals') %}
     {% set excludes = getBlockProp(name, 'reveals_exclude') %}
@@ -41,12 +44,12 @@
       <div class="multiple-choice"{% if optionReveals %} data-target="reveals--{{ optionReveals }}"{% endif %}>
         <input id="{{ name }}-option-{{ loop.index }}" type="radio" name="{{ name }}" value="{{ option.value }}"{% if checked %} checked{% endif %}{% if optionReveals %} aria-controls="reveals--{{ optionReveals }}"{% endif %}>
       <label data-block-name={{option_name}} for="{{ name }}-option-{{ loop.index }}" class="block-label selection-button-radio">
-        {{ optionLabel(option) }}
+        {{ OptionLabel(option) }}
       </label>
-      {{ subblock(option.subblock) }}
+      {{ SubBlock(option.subblock) }}
       </div>
     {% endfor %}
-    {{ subblock(getBlockProp(name, 'subblock'), closed=closed) }}
+    {{ SubBlock(getBlockProp(name, 'subblock'), closed=closed) }}
 {% endcall %}
 </div>
 {% endmacro %}
