--- a/app/components/ErrorSummary/ErrorSummary.njk
+++ b/app/components/ErrorSummary/ErrorSummary.njk
@@ -7,8 +7,9 @@
 </p>
 
 <ul class="error-summary-list">
-  {% for errorKey, errorValue in errors %}
-<li><a href="#{{ errorKey }}">{{ getFormattedError(errorKey, {header:true}) }}{#{{errorKey}} - {{errorValue}}#}</a></li>
+{% for errorKey, errorValue in errors %}
+<li><a href="#{{ errorKey }}">{{ getFormattedError(errorKey, {header:true, prefix:route._prefix}) }}</a></li>
+{# <li>errorKey:{{errorKey}} - errorValue:{{errorValue}}</li> #}
 {% endfor %}
 </ul>
 
